[package]
name = "zfp-sys-cc"
version = "0.1.4"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2021"
description = "Raw Rust bindings to ZFP (https://github.com/LLNL/zfp) with Microsoft Windows 10 support."
repository = "https://github.com/jvo203/zfp-sys-cc"
readme = "README.md"
license = "MIT"
categories = ["compression", "external-ffi-bindings", "science"]

[build-dependencies]
bindgen = "0.66.0"
cc = "1.0"

[features]
default = []
cuda = []
